burger button and first mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,13 +8,13 @@
 @import "./components/body";
 @import "./components/logo";
 @import "./components/header/page-header";
-@import "./components/hero/hero";
-@import "./components/business/business-box";
-@import "./components/team/team-box";
-@import "./components/clients/client-list";
-@import "./components/footer/footer-box";
-@import "./components/portfolio/portfolio-box";
-@import "./components/portfolio/filters";
+// @import "./components/hero/hero";
+// @import "./components/business/business-box";
+// @import "./components/team/team-box";
+// @import "./components/clients/client-list";
+// @import "./components/footer/footer-box";
+// @import "./components/portfolio/portfolio-box";
+// @import "./components/portfolio/filters";
 @import "./components/modal_window/modal";
 @import "./components/modal_window/button";
 @import "./components/modal_window/form_style";
