--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -8,3 +8,25 @@
   cursor: pointer;
   border: none;
 }
+.burger {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: inline-flex;
+  border: none;
+  background-color: getColor("background");
+  cursor: pointer;
+  outline: none;
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
+  &__icon-croos {
+    display: none;
+  }
+  &.is-open &__icon-croos {
+    display: block;
+  }
+  &.is-open &__icon-burger {
+    display: none;
+  }
+}
