--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,3 +1,15 @@
 .container {
-  @extend %container;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: 0px auto 0px auto;
+  border: 1px solid black;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
