--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -2,19 +2,79 @@
   border-bottom: 1px solid getColor("background-header");
 }
 .header-container {
+  position: relative;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 738px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1170px;
+  }
 }
 .nav {
-  margin-right: 215px;
-  &__list {
-    display: flex;
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    top: 55px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: getColor("background");
+    border-bottom: 1px solid getColor("background-header");
+    display: none;
+    z-index: 10;
+    &.is-open {
+      display: block;
+    }
   }
+  @media screen and (min-width: 768px) {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__list {
+    &:first-child {
+      @media screen and (max-width: 480px) {
+        margin-bottom: 50px;
+      }
+      @media screen and (min-width: 768px) {
+        display: flex;
+        margin: 0px 150px 0px 0px;
+      }
+      @media screen and (min-width: 1200px) {
+        margin: 0px 250px 0px 0px;
+      }
+    }
+  }
+  &__items {
+    @media screen and (max-width: 480px) {
+      margin-bottom: 20px;
+    }
+    @media screen and (min-width: 480px) {
+      margin: 0;
+    }
+  }
+  &__number {
+    margin: 0;
+  }
+
   &__items:not(:last-child) {
-    margin-right: 50px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+    }
   }
 }
 .link {
@@ -35,11 +95,12 @@
     &::after {
       content: "";
       display: block;
-      width: 100%;
+      margin: 0px auto 0px auto;
+      width: 15%;
       height: 4px;
       border-radius: 2px;
       background-color: getColor("hover");
-      transform: translateY(26px);
+      transform: translateY(10px);
     }
   }
 
