--- a/css/main.css
+++ b/css/main.css
@@ -387,7 +387,6 @@ summary {
   padding-right: 15px;
   padding-left: 15px;
   margin: 0px auto 0px auto;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 480px) {
@@ -456,8 +455,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  height: 60px;
 }
 
 @media screen and (min-width: 480px) {
@@ -471,13 +469,14 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 738px;
+    height: 80px;
     padding-top: 24px;
     padding-bottom: 25px;
   }
@@ -511,6 +510,101 @@ img {
 @media screen and (min-width: 768px) {
   .nav {
     position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav__list {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav__list {
+    margin-right: 280px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav__items:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__items:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.nav__link {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 0.88;
+  color: #212121;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__link {
+    font-size: 14px;
+  }
+}
+
+.nav__link:hover, .nav__link:focus {
+  color: #2196f3;
+}
+
+.nav__link--active {
+  color: #2196f3;
+}
+
+.nav__link--active::after {
+  content: " ";
+  display: block;
+  margin: 0px auto 0px auto;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+}
+
+@media screen and (min-width: 768px) {
+  .nav__link--active::after {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -520,87 +614,7 @@ img {
   }
 }
 
-@media screen and (max-width: 480px) {
-  .nav__list:first-child {
-    margin-bottom: 50px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .nav__list:first-child {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0px 150px 0px 0px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .nav__list:first-child {
-    margin: 0px 250px 0px 0px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .nav__items {
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .nav__items {
-    margin: 0;
-  }
-}
-
-.nav__number {
-  margin: 0;
-}
-
-@media screen and (min-width: 1200px) {
-  .nav__items:not(:last-child) {
-    margin-right: 50px;
-  }
-}
-
-.link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 0.88;
-  color: #212121;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link:hover, .link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.link--active {
-  color: #2196f3;
-}
-
-.link--active::after {
-  content: "";
-  display: block;
-  margin: 0px auto 0px auto;
-  width: 15%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
-  -webkit-transform: translateY(10px);
-          transform: translateY(10px);
-}
-
-.link__cont {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  color: #757575;
-  fill: #757575;
+.contacts__items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -612,7 +626,60 @@ img {
           align-items: center;
 }
 
-.link__cont--symbol {
+@media screen and (min-width: 768px) {
+  .contacts__items {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__items:first-child {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts__items:first-child {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__items:first-child {
+    margin-right: 20px;
+  }
+}
+
+.contacts__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 0.88;
+  color: #757575;
+  fill: #757575;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__link {
+    font-size: 14px;
+  }
+}
+
+.contacts__link:hover, .contacts__link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.contacts__symbol {
   margin-right: 10px;
 }
 
