--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,7 +2,7 @@
   padding-right: 15px;
   padding-left: 15px;
   margin: 0px auto 0px auto;
-  border: 1px solid black;
+  // border: 1px solid black;
   @media screen and (min-width: 480px) {
     width: 480px;
   }
