--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "./components/body";
 @import "./components/logo";
 @import "./components/header/page-header";
+@import "./components/header/navigation";
+@import "./components/header/contacts";
 // @import "./components/hero/hero";
 // @import "./components/business/business-box";
 // @import "./components/team/team-box";
