--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "./components/header/page-header";
 @import "./components/header/navigation";
 @import "./components/header/contacts";
-// @import "./components/hero/hero";
+@import "./components/hero/hero";
 // @import "./components/business/business-box";
 // @import "./components/team/team-box";
 // @import "./components/clients/client-list";
