--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,8 +21,9 @@ $colors: (
   @return map-get($colors, $key);
 }
 $time: 250ms;
+$borderHeader: 1px solid rgb(236, 236, 236);
 $border: 1px solid rgba(255, 255, 255, 0.3);
-$gradient: linear-gradient(to right, rgba(0, 0, 0, 0.5));
+$gradient: linear-gradient(to right, rgba(0, 0, 0, 0.6));
 $size-mobile: 480px;
 $size-tablet: 768px;
 $size: 1200px;
