--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -9,24 +9,32 @@
   border: none;
 }
 .burger {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  display: block;
+  padding: 0;
   border: none;
   background-color: getColor("background");
   cursor: pointer;
   outline: none;
+  transform: translateX(-8px);
   @media screen and (min-width: 767px) {
     display: none;
   }
-  &__icon-croos {
+  &:hover,
+  &:focus {
+    fill: getColor("hover");
+  }
+  &__icon-cross {
     display: none;
   }
-  &.is-open &__icon-croos {
+  &.is-open &__icon-cross {
     display: block;
   }
   &.is-open &__icon-burger {
     display: none;
+  }
+  &__symbol {
+    padding: 10px;
   }
 }
