--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -1,11 +1,13 @@
 .header {
-  border-bottom: 1px solid getColor("background-header");
+  border-bottom: $borderHeader;
 }
 .header-container {
   position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  height: 60px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   @media screen and (min-width: 480px) {
     width: 450px;
   }
@@ -15,8 +17,8 @@
     justify-content: space-between;
     width: 738px;
     height: 80px;
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
   @media screen and (min-width: 1200px) {
     width: 1170px;
