--- a/sass/components/hero/_hero.scss
+++ b/sass/components/hero/_hero.scss
@@ -1,19 +1,73 @@
 .hero-container {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  padding: 200px 250px;
+  min-width: 480px;
   max-width: 1600px;
-  height: 600px;
-  background-image: $gradient, url(../images/squoosh/background-monitor.jpg);
+  min-height: 400px;
+  max-height: 600px;
+  padding: 118px 60px;
+  margin: 0px auto 0px auto;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  @media screen and (max-width: 767px) {
+    background-image: $gradient, url(../images/squoosh/background-mobile.jpg);
+    background-size: 480px 400px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/background-mobile@2x.jpg);
+    }
+    @media screen and (min-device-pixel-ratio: 3),
+      screen and (min-resolution: 288dpi),
+      screen and (min-resolution: 3dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/background-mobile@3x.jpg);
+    }
+  }
+  @media screen and (min-width: 768px) {
+    background-image: $gradient, url(../images/squoosh/background-tablet.jpg);
+    background-size: 768px 400px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/backgroud-tablet@2x.jpg);
+    }
+    @media screen and (min-device-pixel-ratio: 3),
+      screen and (min-resolution: 288dpi),
+      screen and (min-resolution: 3dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/background-tablet@3x.jpg);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: $gradient, url(../images/squoosh/background-monitor.jpg);
+    background-size: 1600px 600px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/background-monitor@2x.jpg);
+    }
+    @media screen and (min-device-pixel-ratio: 3),
+      screen and (min-resolution: 288dpi),
+      screen and (min-resolution: 3dppx) {
+      background-image: $gradient,
+        url(../images/squoosh/background-monitor@3x.jpg);
+    }
+  }
   &__title {
-    font-size: 44px;
+    font-size: 26px;
     line-height: 1.7;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     margin-top: 0;
     color: getColor("background");
     z-index: 4;
+    @media screen and(min-width:1200px) {
+      font-size: 44px;
+    }
     &--decor {
       display: block;
     }
