hero is hidden on click burger button

--- a/css/main.css
+++ b/css/main.css
@@ -688,6 +688,10 @@ img {
   margin-right: 10px;
 }
 
+.hero.is-hidden {
+  display: none;
+}
+
 .hero-container {
   min-width: 480px;
   max-width: 1600px;
