--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,9 @@
 .container {
-  margin: 0px auto 0px auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+
   @media screen and (min-width: 480px) {
     width: 480px;
   }
@@ -8,7 +12,5 @@
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
   }
 }
