--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,10 +11,10 @@
 @import "./components/header/navigation";
 @import "./components/header/contacts";
 @import "./components/hero/hero";
-// @import "./components/business/business-box";
-// @import "./components/team/team-box";
-// @import "./components/clients/client-list";
-// @import "./components/footer/footer-box";
+@import "./components/business/business-box";
+@import "./components/team/team-box";
+@import "./components/clients/client-list";
+@import "./components/footer/footer-box";
 // @import "./components/portfolio/portfolio-box";
 // @import "./components/portfolio/filters";
 @import "./components/modal_window/modal";
