--- a/sass/components/business/_business-box.scss
+++ b/sass/components/business/_business-box.scss
@@ -1,71 +1,110 @@
 .business {
-  @media screen and (min-width: 768px) {
-    padding-top: 95px;
-    padding-bottom: 95px;
-
-    &__list {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  &__list {
+    @media screen and (min-width: 768px) {
       display: flex;
+      flex-wrap: wrap;
+      margin: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
       justify-content: space-between;
-      &:not(:last-child) {
-        margin-bottom: 95px;
-      }
+      margin: 0px 0px 94px 0px;
     }
+  }
 
-    &__item {
+  &__item {
+    width: 450px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 354px;
+      margin: 15px;
+    }
+    @media screen and (min-width: 1200px) {
       width: 270px;
     }
 
-    &__box {
-      @extend %display-center;
-      width: 270px;
-      height: 120px;
-      background-color: getColor("background-color");
-      border-radius: 4px;
-      margin-bottom: 30px;
-    }
-
-    &__symbol {
-      width: 70px;
-      height: 70px;
-    }
-
-    &__title {
-      font-size: 14px;
-      line-height: 0.9;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      margin-top: 0;
-    }
-
-    &__text {
-      font-size: 14px;
-      line-height: 1.6;
-      letter-spacing: 0.03em;
-      color: getColor("text-mini");
-      margin: 0;
-    }
-    &__image-box {
-      position: relative;
-      width: 370px;
-      &--text {
-        position: absolute;
-        bottom: -5%;
-        width: 100%;
-        height: 70px;
-        background-color: getColor("hidden");
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 0.9;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        padding-top: 30px;
-        color: getColor("background");
+    &:not(:last-child) {
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
       }
     }
   }
+
+  &__box {
+    @extend %display-center;
+    width: 450px;
+    height: 120px;
+    background-color: getColor("background-color");
+    border-radius: 4px;
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
+  }
+
+  &__symbol {
+    width: 70px;
+    height: 70px;
+  }
+
+  &__title {
+    font-size: 14px;
+    line-height: 0.9;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 0;
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
+  }
+
+  &__text {
+    font-size: 14px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    color: getColor("text-mini");
+    margin: 0;
+  }
+  &__image-box {
+    display: none;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: center;
+    }
+    &--item {
+      position: relative;
+      width: 370px;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+    }
+    &--text {
+      position: absolute;
+      bottom: -5%;
+      width: 100%;
+      height: 70px;
+      background-color: getColor("hidden");
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 0.9;
+      text-align: center;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      padding-top: 30px;
+      color: getColor("background");
+    }
+  }
 }
-.other-title {
+.title__image-box {
+  @media screen and(max-width:1200px) {
+    display: none;
+  }
   font-size: 36px;
   line-height: 0.9;
   letter-spacing: 0.03em;
