--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,7 @@ img {
 
 .header-container {
   position: relative;
+  min-width: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,7 +495,6 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    height: 80px;
     padding-top: 26px;
     padding-bottom: 26px;
   }
@@ -1088,6 +1088,7 @@ img {
 }
 
 .clients-box__list {
+  min-width: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1159,14 +1160,33 @@ img {
 
 .footer-box {
   position: relative;
-  text-align: center;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-box {
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-box {
     height: 463px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -1295,6 +1315,13 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
 .footer-form__input:focus {
   border: 1px solid #2196f3;
   color: #2196f3;
@@ -1345,10 +1372,16 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 530px;
+  width: 450px;
   height: 580px;
   padding: 40px;
   background-color: white;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 530px;
+  }
 }
 
 .button-close {
@@ -1396,7 +1429,7 @@ img {
 }
 
 .input-box__input {
-  width: 450px;
+  width: 370px;
   height: 40px;
   padding-left: 45px;
   outline: none;
@@ -1404,6 +1437,12 @@ img {
   border-radius: 4px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .input-box__input {
+    width: 450px;
+  }
 }
 
 .input-box__text {
@@ -1442,7 +1481,7 @@ img {
 }
 
 .comment {
-  width: 450px;
+  width: 370px;
   height: 120px;
   padding: 10px;
   resize: none;
@@ -1453,6 +1492,12 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 25px;
+}
+
+@media screen and (min-width: 1200px) {
+  .comment {
+    width: 450px;
+  }
 }
 
 .comment:focus {
@@ -1466,7 +1511,15 @@ img {
 
 .checkbox__label {
   cursor: pointer;
-  font-size: 14px;
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox__label {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
 }
 
 .checkbox__input {
@@ -1475,7 +1528,7 @@ img {
 }
 
 .checkbox__icon {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #757575;
@@ -1490,6 +1543,12 @@ img {
           transform: translate(-11px, 1px);
   -webkit-transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox__icon {
+    font-size: 14px;
+  }
 }
 
 .checkbox__input:checked + .checkbox__icon {
