--- a/sass/components/clients/_client-list.scss
+++ b/sass/components/clients/_client-list.scss
@@ -2,6 +2,7 @@
   padding-top: 94px;
   padding-bottom: 94px;
   &__list {
+    min-width: 480px;
     display: flex;
     flex-wrap: wrap;
     margin: -15px;
