--- a/sass/components/footer/_footer-box.scss
+++ b/sass/components/footer/_footer-box.scss
@@ -6,11 +6,18 @@
 
 .footer-box {
   position: relative;
-  text-align: center;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     height: 463px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -94,9 +101,6 @@
   }
 
   &__input {
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      display: block;
-    }
     width: 450px;
     height: 50px;
     background-color: getColor("foreground");
@@ -106,8 +110,15 @@
     outline: 0;
     padding-left: 16px;
     transition: color $time $cubic, border $time $cubic;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: block;
+    }
     @media screen and (max-width: 1199px) {
       margin-bottom: 20px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      margin-right: 12px;
     }
     &:focus {
       border: 1px solid getColor("hover");
