--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -3,6 +3,7 @@
 }
 .header-container {
   position: relative;
+  min-width: 480px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,7 +13,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 80px;
     padding-top: 26px;
     padding-bottom: 26px;
   }
