--- a/sass/components/modal_window/_form_style.scss
+++ b/sass/components/modal_window/_form_style.scss
@@ -15,13 +15,16 @@
   margin-bottom: 30px;
 
   &__input {
-    width: 450px;
+    width: 370px;
     height: 40px;
     padding-left: 45px;
     outline: none;
     border: 1px solid getColor("input-border");
     border-radius: 4px;
     transition: color $time $cubic, border $time $cubic;
+    @media screen and (min-width: 1200px) {
+      width: 450px;
+    }
   }
 
   &__text {
@@ -53,7 +56,7 @@
 }
 
 .comment {
-  width: 450px;
+  width: 370px;
   height: 120px;
   padding: 10px;
   resize: none;
@@ -63,6 +66,9 @@
   outline: none;
   transition: color $time $cubic, border $time $cubic;
   margin-bottom: 25px;
+  @media screen and (min-width: 1200px) {
+    width: 450px;
+  }
   &:focus {
     border: 1px solid getColor("hover");
     color: getColor("hover");
@@ -73,7 +79,12 @@
 
   &__label {
     cursor: pointer;
-    font-size: 14px;
+    font-size: 12px;
+    margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      margin-bottom: 0;
+    }
   }
 
   &__input {
@@ -81,7 +92,7 @@
   }
 
   &__icon {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: getColor("text-mini");
@@ -92,6 +103,9 @@
     background-image: url(../images/optim-svg/icon-moon/vector.svg);
     transform: translate(-11px, 1px);
     transition: background-image 250ms $cubic;
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+    }
   }
   &__input:checked + &__icon {
     background-image: url(../images/optim-svg/icon-moon/icon-check.svg);
