--- a/sass/components/modal_window/_modal.scss
+++ b/sass/components/modal_window/_modal.scss
@@ -18,8 +18,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 530px;
+  width: 450px;
   height: 580px;
   padding: 40px;
   background-color: getColor("background");
+  @media screen and (min-width: 1200px) {
+    width: 530px;
+  }
 }
