--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -74,6 +74,9 @@
         @media screen and (min-width: 768px) {
           transform: translateY(31px);
         }
+        @media screen and (min-width: 1200px) {
+          transform: translateY(27px);
+        }
       }
     }
   }
