--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -13,7 +13,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    height: 80px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: auto;
+    padding-top: 24px;
+    padding-bottom: 25px;
   }
 }
