--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,18 @@ summary {
   border: none;
 }
 
+.input-button {
+  -webkit-transform: translateY(15px);
+          transform: translateY(15px);
+}
+
+@media screen and (min-width: 1200px) {
+  .input-button {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+}
+
 .burger {
   width: 40px;
   height: 40px;
@@ -1365,6 +1377,64 @@ img {
   margin: 0px 0px 0px 10px;
 }
 
+.filter-box {
+  padding-top: 94px;
+  padding-bottom: 50px;
+}
+
+.filter-box__title {
+  display: none;
+}
+
+.filter-box__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media screen and (min-width: 768px) {
+  .filter-box__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.filter-box__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .filter-box__item:nth-child(-n + 4) {
+    margin-bottom: 15px;
+  }
+}
+
+.filter-box__button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.3;
+  display: block;
+  padding: 6px 22px;
+  background-color: #f5f4fa;
+  color: #212121;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  outline: 0;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-box__button:hover, .filter-box__button:focus {
+  background-color: #2196f3;
+  color: white;
+}
+
 .backdrop {
   position: fixed;
   z-index: 5;
@@ -1528,13 +1598,17 @@ img {
 .checkbox__label {
   cursor: pointer;
   font-size: 12px;
-  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media screen and (min-width: 1200px) {
   .checkbox__label {
     font-size: 14px;
-    margin-bottom: 0;
   }
 }
 
@@ -1552,7 +1626,7 @@ img {
   display: -ms-inline-flexbox;
   display: inline-flex;
   width: 16px;
-  height: 15px;
+  height: 16px;
   cursor: pointer;
   background-image: url(../images/optim-svg/icon-moon/vector.svg);
   -webkit-transform: translate(-11px, 1px);
