--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -8,6 +8,12 @@
   cursor: pointer;
   border: none;
 }
+.input-button {
+  transform: translateY(15px);
+  @media screen and (min-width: 1200px) {
+    transform: translateY(10px);
+  }
+}
 .burger {
   width: 40px;
   height: 40px;
