--- a/sass/components/portfolio/_filters.scss
+++ b/sass/components/portfolio/_filters.scss
@@ -7,13 +7,22 @@
   }
 
   &__list {
-    @extend %display-center;
+    display: flex;
+    flex-wrap: wrap;
+    @media screen and (min-width: 768px) {
+      flex-wrap: nowrap;
+      justify-content: center;
+    }
   }
 
   &__item:not(:last-child) {
     margin-right: 8px;
   }
-
+  &__item:nth-child(-n + 4) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+    }
+  }
   &__button {
     font-weight: 500;
     font-size: 16px;
