--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./components/clients/client-list";
 @import "./components/footer/footer-box";
 // @import "./components/portfolio/portfolio-box";
-// @import "./components/portfolio/filters";
+@import "./components/portfolio/filters";
 @import "./components/modal_window/modal";
 @import "./components/modal_window/button";
 @import "./components/modal_window/form_style";
