--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,7 @@
 @import "./components/team/team-box";
 @import "./components/clients/client-list";
 @import "./components/footer/footer-box";
-// @import "./components/portfolio/portfolio-box";
+@import "./components/portfolio/portfolio-box";
 @import "./components/portfolio/filters";
 @import "./components/modal_window/modal";
 @import "./components/modal_window/button";
