--- a/sass/components/business/_business-box.scss
+++ b/sass/components/business/_business-box.scss
@@ -1,6 +1,7 @@
 .business {
   padding-top: 60px;
   padding-bottom: 60px;
+  min-width: 450px;
   &__list {
     @media screen and (min-width: 768px) {
       display: flex;
