--- a/sass/components/portfolio/_filters.scss
+++ b/sass/components/portfolio/_filters.scss
@@ -1,6 +1,13 @@
 .filter-box {
-  padding-top: 94px;
-  padding-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 93px;
+    padding-bottom: 50px;
+  }
 
   &__title {
     display: none;
