--- a/sass/components/portfolio/_portfolio-box.scss
+++ b/sass/components/portfolio/_portfolio-box.scss
@@ -1,19 +1,20 @@
 .portfolio-list {
-  width: 1170px;
+  min-width: 450px;
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 95px;
 
   &__item {
-    flex-basis: calc((100% - 60px) / 3);
-    margin-right: 30px;
+    width: 450px;
+    // flex-basis: calc((100% - 60px) / 3);
+    // margin-right: 30px;
 
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-    &:nth-child(-n + 6) {
-      margin-bottom: 30px;
-    }
+    // &:nth-child(3n) {
+    //   margin-right: 0;
+    // }
+    // &:nth-child(-n + 6) {
+    //   margin-bottom: 30px;
+    // }
   }
 
   &__link {
