--- a/css/main.css
+++ b/css/main.css
@@ -1380,16 +1380,38 @@ img {
 
 .portfolio-list {
   min-width: 450px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   padding-bottom: 95px;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
+}
+
 .portfolio-list__item {
+  overflow: hidden;
   width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-list__item {
+    width: 354px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .portfolio-list__link {
@@ -1424,13 +1446,13 @@ img {
 }
 
 .portfolio-list__text-box {
-  padding: 30px 20px;
+  padding: 30px 0px 30px 20px;
   border: 1px solid #eeeeee;
 }
 
 .hidden-box {
   position: relative;
-  width: 370px;
+  width: 100%;
   height: 294px;
   overflow: hidden;
 }
@@ -1465,6 +1487,7 @@ img {
 .filter-box {
   padding-top: 60px;
   padding-bottom: 40px;
+  min-width: 450px;
 }
 
 @media screen and (min-width: 768px) {
