--- a/sass/components/portfolio/_filters.scss
+++ b/sass/components/portfolio/_filters.scss
@@ -1,6 +1,7 @@
 .filter-box {
   padding-top: 60px;
   padding-bottom: 40px;
+  min-width: 450px;
   @media screen and (min-width: 768px) {
     padding-bottom: 30px;
   }
