--- a/sass/components/portfolio/_portfolio-box.scss
+++ b/sass/components/portfolio/_portfolio-box.scss
@@ -1,11 +1,23 @@
 .portfolio-list {
   min-width: 450px;
-  display: flex;
-  flex-wrap: wrap;
   padding-bottom: 95px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  
 
   &__item {
+    overflow: hidden;
     width: 450px;
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      
+    }
+    &:not(:last-child) {
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+      }
+    }
     // flex-basis: calc((100% - 60px) / 3);
     // margin-right: 30px;
 
@@ -45,14 +57,14 @@
     margin-bottom: 0;
   }
   &__text-box {
-    padding: 30px 20px;
+    padding: 30px 0px 30px 20px;
     border: 1px solid getColor("border-portfolio");
   }
 }
 
 .hidden-box {
   position: relative;
-  width: 370px;
+  width: 100%;
   height: 294px;
   overflow: hidden;
   &__text {
