--- a/css/main.css
+++ b/css/main.css
@@ -1390,26 +1390,53 @@ img {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: -30px;
-    margin-bottom: -30px;
+    width: 738px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    width: 1170px;
   }
 }
 
 .portfolio-list__item {
-  overflow: hidden;
   width: 450px;
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio-list__item {
-    width: 354px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
 }
 
 @media screen and (max-width: 767px) {
   .portfolio-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+    margin-right: 30px;
+  }
+  .portfolio-list__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .portfolio-list__item:nth-child(-n + 7) {
+    margin-bottom: 30px;
+  }
+  .portfolio-list__item:nth-child(9) {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+    margin-right: 30px;
+  }
+  .portfolio-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .portfolio-list__item:nth-child(-n + 6) {
     margin-bottom: 30px;
   }
 }
