--- a/sass/components/business/_business-box.scss
+++ b/sass/components/business/_business-box.scss
@@ -6,29 +6,39 @@
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
-      margin: -15px;
+      width: 738px;
     }
     @media screen and (min-width: 1200px) {
       flex-wrap: nowrap;
       justify-content: space-between;
       margin: 0px 0px 94px 0px;
+      width: 1170px;
     }
   }
 
   &__item {
     width: 450px;
-
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      width: 354px;
-      margin: 15px;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 270px;
-    }
-
     &:not(:last-child) {
       @media screen and (max-width: 767px) {
         margin-bottom: 30px;
+      }
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      flex-basis: calc((100% - 30px) / 2);
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+      &:nth-child(n + 3) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 90px) / 4);
+      &:not(:last-child) {
+        margin-right: 30px;
       }
     }
   }
@@ -77,10 +87,11 @@
     @media screen and (min-width: 1200px) {
       display: flex;
       justify-content: center;
+      width: 1170px;
     }
     &--item {
       position: relative;
-      width: 370px;
+      flex-basis: calc((100% - 60px) / 3);
       &:not(:last-child) {
         margin-right: 30px;
       }
