--- a/sass/components/team/_team-box.scss
+++ b/sass/components/team/_team-box.scss
@@ -11,11 +11,12 @@
     @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
-      margin: -15px;
+      width: 738px;
     }
     @media screen and (min-width: 1200px) {
       flex-wrap: nowrap;
       justify-content: space-between;
+      width: 1170px;
     }
   }
 
@@ -23,13 +24,22 @@
     width: 450px;
     box-shadow: $team-item;
     border-radius: 0px 0px 4px 4px;
-    @media screen and (min-width: 768px) {
-      width: 354px;
-      margin: 15px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      flex-basis: calc((100% - 30px) / 2);
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+      &:nth-child(n + 3) {
+        margin-bottom: 0;
+      }
     }
     @media screen and (min-width: 1200px) {
-      width: 270px;
-      margin: 0px;
+      flex-basis: calc((100% - 90px) / 4);
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
     }
     &:not(:last-child) {
       @media screen and (max-width: 767px) {
