--- a/sass/components/clients/_client-list.scss
+++ b/sass/components/clients/_client-list.scss
@@ -1,6 +1,7 @@
 .clients-box {
   padding-top: 94px;
   padding-bottom: 94px;
+  min-width: 480px;
   &__list {
     min-width: 450px;
     display: flex;
