--- a/sass/components/business/_business-box.scss
+++ b/sass/components/business/_business-box.scss
@@ -2,6 +2,9 @@
   padding-top: 60px;
   padding-bottom: 60px;
   min-width: 450px;
+  &.is-up {
+    padding-top: 0;
+  }
   &__list {
     @media screen and (min-width: 768px) {
       display: flex;
